@@ -4,7 +4,7 @@ package Net::Async::OpenTracing;
 use strict;
 use warnings;
 
-our $VERSION = '0.001';
+our $VERSION = '1.000';
 # AUTHORITY
 
 use parent qw(IO::Async::Notifier);
@@ -17,6 +17,22 @@ use utf8;
 =head1 NAME
 
 Net::Async::OpenTracing - OpenTracing APM via L<IO::Async>
+
+=head1 SYNOPSIS
+
+ use Net::Async::OpenTracing;
+ use IO::Async::Loop;
+ use OpenTracing::Any qw($tracer);
+ my $loop = IO::Async::Loop->new;
+ $loop->add(
+    my $tracing = Net::Async::OpenTracing->new(
+        host => '127.0.0.1',
+        port => 6832,
+    )
+ );
+ $tracer->span(operation_name => 'example');
+ # Manual sync - generally only needed on exit
+ $tracing->sync->get;
 
 =head1 DESCRIPTION
 
@@ -53,14 +69,13 @@ Set up an L<Net::Async::OpenTracing> instance with those connection details:
         port => 6832,
     )
  );
- $tracer->register_collector($tracing);
  # Now generate some traffic
  {
   my $span = $tracer->span(
-   'example_span'
+   operation_name => 'example_span'
   );
   $span->log('test message ' . $_ . ' from the parent') for 1..3;
-  my $child = $span->span('child_span');
+  my $child = $span->span(operation_name => 'child_span');
   $child->log('message ' . $_ . ' from the child span') for 1..3;
  }
  # Make sure all trace data is sent
@@ -70,14 +85,17 @@ You should then see a trace with 2 spans show up.
 
 =cut
 
+use mro;
+use curry;
 use Syntax::Keyword::Try;
-use Unicode::UTF8 qw(encode_utf8 decode_utf8);
 use Time::HiRes ();
-use Math::Random::Secure;
 use IO::Async::Socket;
+use Future::AsyncAwait;
 
 use OpenTracing;
 use OpenTracing::Batch;
+use OpenTracing::Protocol::Jaeger;
+use OpenTracing::Any qw($tracer);
 
 use Log::Any qw($log);
 
@@ -97,6 +115,9 @@ Takes the following named parameters:
 
 =item * C<batches_per_loop> - number of batches to try sending for each loop iteration
 
+=item * C<tracer> - the L<OpenTracing::Tracer> instance to use, defaults to the one
+provided by L<OpenTracing::Any>
+
 =back
 
 =cut
@@ -104,7 +125,11 @@ Takes the following named parameters:
 sub configure {
     my ($self, %args) = @_;
     $self->{pending} //= [];
-    for my $k (qw(host port protocol items_per_batch batches_per_loop)) {
+
+    # Only support Jæger for now
+    die 'invalid protocol' if $args{protocol} and $args{protocol} ne 'jaeger';
+
+    for my $k (qw(host port protocol items_per_batch batches_per_loop tracer)) {
         $self->{$k} = delete $args{$k} if exists $args{$k};
     }
     return $self->next::method(%args);
@@ -112,7 +137,7 @@ sub configure {
 
 =head2 host
 
-
+The hostname or IP to send spans to.
 
 =cut
 
@@ -120,14 +145,26 @@ sub host { shift->{host} }
 
 =head2 port
 
-
+The port to send spans to.
 
 =cut
 
 sub port { shift->{port} }
 
+=head2 tracer
+
+The L<OpenTracing::Tracer> instance, defaults to the standard L<OpenTracing::Any>-provided one.
+
+=cut
+
+sub tracer { shift->{tracer} || $tracer }
+
 sub _add_to_loop {
     my ($self) = @_;
+
+    # Nothing to send yet, so mark this as done immediately
+    $self->{send_in_progress} = Future->done;
+
     $self->add_child(
         $self->{udp} = my $client = IO::Async::Socket->new(
             on_recv => sub {
@@ -138,218 +175,164 @@ sub _add_to_loop {
                     $log->errorf("Exception when receiving: %s", $@);
                 }
             },
+            on_outgoing_empty => $self->$curry::weak(sub {
+                shift->{send_in_progress}->done
+            }),
         )
     );
+    $self->tracer->add_span_completion_callback(
+        $self->{span_completion} = $self->$curry::weak(sub {
+            my ($self) = @_;
+            $self->loop->later(sub {
+                $self->start_sending;
+            });
+        })
+    );
+    $self->tracer->enable;
     $self->{connected} = $client->connect(
         host     => $self->host,
         service  => $self->port,
         socktype => 'dgram',
-    )->then(sub {
+    )->on_done(sub {
         $log->tracef('Connected to UDP endpoint');
-        my @pending = splice $self->{pending}->@*;
-        $log->tracef('Have %d messages to send', 0 + @pending);
-        Future->wait_all(
-            map { $client->send($_) } @pending
-        )
+        $self->start_sending;
     })->retain;
 }
 
-sub process {
+=head1 METHODS - Internal
+
+=head2 send
+
+Performs the send and sets up the L<Future> for marking completion.
+
+=cut
+
+sub send {
+    my ($self, $bytes) = @_;
+    $self->{send_in_progress} = $self->loop->new_future
+        if $self->{send_in_progress}->is_ready;
+    $self->udp->send($bytes);
+    return $self->send_in_progress;
+}
+
+=head2 send_in_progress
+
+Returns a L<Future> indicating whether a send is in progress or not (will
+be marked as L<Future/done> if the send is complete).
+
+=cut
+
+sub send_in_progress { shift->{send_in_progress}->without_cancel }
+
+=head2 is_sending
+
+Returns true if we are currently sending data.
+
+=cut
+
+sub is_sending { my $f = shift->{is_sending}; $f && !$f->is_ready }
+
+=head2 start_sending
+
+Trigger the send process, which will cause all pending traces to be
+sent to the remote endpoint.
+
+Does nothing if sending is already in progress.
+
+=cut
+
+sub start_sending {
     my ($self) = @_;
-    $self->{process} //= do {
-        OpenTracing::Process->new(
-            name => "$0"
-        )
+    return if $self->is_sending;
+    $self->{is_sending} = $self->send_all_pending;
+}
+
+=head2 proto
+
+The L<OpenTracing::Protocol> instance.
+
+=cut
+
+sub proto { shift->{proto} //= OpenTracing::Protocol::Jaeger->new }
+
+=head2 sub
+
+Sends all pending batches.
+
+=cut
+
+async sub send_all_pending {
+    my ($self) = @_;
+    my $count = 0;
+    while(await $self->send_next_batch) {
+        await $self->loop->delay_future(after => 0)
+            unless ++$count % $self->batches_per_loop;
     }
 }
+
+sub items_per_batch { shift->{items_per_batch} ||= 10 }
+sub batches_per_loop { shift->{batches_per_loop} ||= 64 }
+
+=head2 sub
+
+Gathers and sends a single L<OpenTracing::Batch>.
+
+=cut
+
+async sub send_next_batch {
+    my ($self) = @_;
+    my $batch = OpenTracing::Batch->new;
+    my @spans = $self->tracer->extract_finished_spans($self->items_per_batch)
+        or return 0;
+    $batch->add_span($_) for @spans;
+
+    my $bytes = pack('n1n1N/a*N1', 0x8001, 4, 'emitBatch', 1)
+        . $self->proto->encode_batch($batch)
+        . pack('C1', 0);
+    await $self->send(
+        $bytes
+    );
+    return 0 + @spans;
+}
+
+=head2 span_completion
+
+Our callback for reporting span completion.
+
+=cut
+
+sub span_completion { shift->{span_completion} }
+
+sub _remove_from_loop {
+    my ($self) = @_;
+    my $span_completion = $self->span_completion or return;
+    $self->tracer->remove_span_completion_callback($span_completion);
+}
+
+=head2 udp
+
+The remote UDP endpoint (if it exists).
+
+=cut
 
 sub udp { shift->{udp} }
 
-sub new_batch {
-    my ($self, %args) = @_;
-    $log->tracef('Creating new opentracing batch');
-    return OpenTracing::Batch->new(
-        process => $self->process,
-        on_destroy => sub {
-            $log->infof('Destroy for batch');
-            $self->send_batch(shift);
-        }
-    );
-}
+=head2 sync
 
-sub send_batch {
-    my ($self, $batch) = @_;
-    $log->tracef('Will try to send batch %s', $batch);
+Ensure that we've sent any remaining traces. Can be called just before shutdown
+to clear off any pending items - this returns a L<Future>, so you'd want code
+similar to
 
-    # We're collecting binary Thrift protocol data here, and will send via UDP.
-    my $data = '';
-    $data .= pack 'C1n1',
-        12, # struct Batch
-        1;  # field 1
+ $tracing->sync->get;
 
-    my $process = $batch->process;
-    # Process
-    $data .= pack 'C1n1 C1n1N/a*',
-        12, # struct
-        1, # field id 1 = Process
-    # string serviceName
-        11, # string
-        1, # field ID 1 = serviceName
-        encode_utf8($process->name // '');
+to ensure that it completes before returning.
 
-    if(my $tags = $process->tags) {
-        warn "process has tags";
-        # list Tag
-        $data .= pack 'C1n1 C1N1',
-            15, # list
-            2, # field ID 2
-            12, # struct
-            0 + keys %$tags if %$tags;
-        for my $k (sort keys %$tags) {
-            $data .= pack 'C1n1N/a* C1n1N1 C1n1N/a* C1',
-                11, # type = string
-                1, # field ID = 1
-                encode_utf8($k // ''),
-                8, # type = int32 (enum)
-                2, # field ID = 2
-                0, # entry 0 is string
-                11, # type = string
-                3, # field ID = 3
-                encode_utf8($tags->{$k} // ''),
-                0; # EOF marker
-        }
-    }
-    $data .= pack 'C1', 0; # EOF marker for process
-
-    # list<Span>
-    my @spans = $batch->span_list;
-    $data .= pack 'C1n1C1N1',
-        15,
-        2,
-        12, # 12 is struct
-        0 + @spans;
-    for my $span (@spans) {
-        $log->infof('Span has trace ID %08x', $span->trace_id);
-        $log->infof('Span has ID %08x', $span->id);
-        $data .= pack 'CnQ> CnQ> CnQ> CnQ> CnN/a* CnN CnQ> CnQ>',
-            # trace_id_low
-            10,
-            1,
-            $span->trace_id,
-            # trace_id_high
-            10,
-            2,
-            0, # Math::Random::Secure::irand(2**62),
-            # span_id
-            10,
-            3,
-            $span->id,
-            # parent_span_id
-            10,
-            4,
-            $span->parent_id,
-            # operation_name
-            11,
-            5,
-            encode_utf8($span->operation_name // ''),
-            # references
-            # flags
-            8,
-            7,
-            $span->flags // 0,
-            # start_time
-            10,
-            8,
-            $span->start_time,
-            # duration
-            10,
-            9,
-            $span->duration;
-            # tags
-        if(my $tags = $span->tags) {
-            # list Tag
-            $data .= pack 'C1n1 C1N1',
-                15, # list
-                10, # field ID 2 (?? why 10 then?)
-                12, # struct
-                0 + keys %$tags if %$tags;
-            for my $k (sort keys %$tags) {
-                $data .= pack 'C1n1N/a* C1n1N1 C1n1N/a* C1',
-                    11, # type = string
-                    1, # field ID = 1
-                    encode_utf8($k // ''),
-                    8, # type = int32 (enum)
-                    2, # field ID = 2
-                    0, # entry 0 is string
-                    11, # type = string
-                    3, # field ID = 3
-                    encode_utf8($tags->{$k} // ''),
-                    0; # EOF marker
-            }
-        }
-        if(my @logs = $span->log_list) {
-            # list Log
-            $data .= pack 'C1n1 C1N1',
-                15, # list
-                11, # field ID 11 for logs
-                12, # struct
-                0 + @logs;
-            for my $log (@logs) {
-                my $tags = $log->tags;
-                $data .= pack 'C1n1Q> C1n1 C1N1',
-                    10, # type = int64
-                    1, # field ID = 1
-                    $log->timestamp,
-                    15, # list
-                    2, # field ID 2
-                    12, # list of structs
-                    0 + keys %$tags if %$tags;
-                for my $k (sort keys %$tags) {
-                    $data .= pack 'C1n1N/a* C1n1N1 C1n1N/a* C1',
-                        11, # type = string
-                        1, # field ID = 1
-                        encode_utf8($k),
-                        8, # type = int32 (enum)
-                        2, # field ID = 2
-                        0, # entry 0 is string
-                        11, # type = string
-                        3, # field ID = 3
-                        encode_utf8($tags->{$k} // ''),
-                        0; # EOF marker
-                }
-                $data .= pack 'C1', 0; # EOF for log
-            }
-        }
-
-        $data .= pack 'C1', 0; # EOF for span
-    }
-
-    $data .= pack 'C1', 0; # EOF marker for Batch
-    $data .= pack 'C1', 0; # EOF marker for method call
-
-    # For the collector, we might want something like this:
-    # my $msg = pack('n1n1N/a*N1', 0x8001, 1, 'submitBatches', 1) . $data;
-    # but for UDP, we only get to talk to the agent, so it's a oneway emitBatch instead
-    my $msg = pack('n1n1N/a*N1', 0x8001, 4, 'emitBatch', 1) . $data;
-    use Devel::Hexdump qw(xd);
-    print xd($msg);
-    if($self->{connected}->is_done) {
-        $log->tracef('Sending packet now');
-        $self->udp->send($msg);
-    } else {
-        $log->tracef('Defer packet until connection is ready');
-        push $self->{pending}->@*, $msg;
-    }
-}
+=cut
 
 sub sync {
     my ($self) = @_;
-    return $self->{connected}->then(sub {
-        my $f = $self->loop->new_future;
-        $self->udp->configure(
-            on_outgoing_empty => sub { $f->done }
-        );
-        $f
+    return $self->{connected}->then(async sub {
+        await $self->send_all_pending;
     });
 }
 
